crates/lang/macro/tests/ui/contract/fail/config-dynamic-storage-allocator-missing-arg.stderr
error: ink! config options require an argument separated by '='
 --> $DIR/config-dynamic-storage-allocator-missing-arg.rs:3:17
  |
3 | #[ink::contract(dynamic_storage_allocator)]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
